/* 
  Localizable.strings
  Pets

  Created by Cristian Serea on 20.02.2024.
  
*/

"Done.Button.Title" = "Done";
"Cancel.Button.Title" = "Cancel";
"Reset.Button.Title" = "Reset";

"Any.Label.Title" = "Any";
"Type.Label.Title" = "Type";
"Description.Label.Title" = "Description";
"Contact.Label.Title" = "Contact";
"Tags.Label.Title" = "Tags";
"Details.Label.Title" = "Details";
"Status.Label.Title" = "Status";
"Species.Label.Title" = "Species";
"Breed.Label.Title" = "Breed";
"Color.Label.Title" = "Color";
"Gender.Label.Title" = "Gender";
"Age.Label.Title" = "Age";
"Size.Label.Title" = "Size";
"Coat.Label.Title" = "Coat";
"Select.Label.Title" = "Tap to select";
"Change.Label.Title" = "Tap to change";
"Miles.Label.Title" = "Miles";
"MilesAway.Label.Title" = "Miles away";
"Disabled.Label.Title" = "Available after selecting a location";

"Error.Label.Title" = "Oops...Something went wrong!";
"Error.KeychainSave.Title" = "An error occurred while saving the item to the Keychain.";
"Error.KeychainRetrieve.Title" = "An error occurred while retrieving the item from Keychain.";

"SortType.DateShuffled.Title" = "Date shuffled";
"SortType.DateAscending.Title" = "Date ascending";
"SortType.DateDescending.Title" = "Date descending";
"SortType.DistanceAscending.Title" = "Distance ascending";
"SortType.DistanceDescending.Title" = "Distance descending";

"Pets.NavigationItem.Title" = "Pets 🐶";
"Pets.FetchingData.Title" = "Fetching pets data";
"Pets.NoData.Title" = "There are no pets available matching your selected filters. Please try adjusting your filters.";

"Settings.NavigationItem.Title" = "Sort & Filter";
